# api-client-py

./: .gitignore  .gitlab-ci.yml  .openapi-generator-ignore  .travis.yml  404.html  CHANGELOG.md  Pipfile  README.md  cmd_generation.txt  gen_pages.py  generate_client.sh  git_push.sh  index.html  mkdocs.yml  objects.inv  openapi.json  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml
.github/workflows/: deploy_doc.yml  python.yml  release.yml
.openapi-generator/: FILES
API_Documentation/SUMMARY/: index.html
API_Documentation/api/embedder_api/: index.html
API_Documentation/api/large_language_model_api/: index.html
API_Documentation/api/memory_api/: index.html
API_Documentation/api/plugins_api/: index.html
API_Documentation/api/rabbit_hole_api/: index.html
API_Documentation/api/settings_api/: index.html
API_Documentation/api/status_api/: index.html
API_Documentation/api_client/: index.html
API_Documentation/api_response/: index.html
API_Documentation/cat_client/: index.html
API_Documentation/config/: index.html
API_Documentation/configuration/: index.html
API_Documentation/exceptions/: index.html
API_Documentation/models/body_upload_url/: index.html
API_Documentation/models/http_validation_error/: index.html
API_Documentation/rest/: index.html
cheshire_cat_api/: __init__.py  api_client.py  cat_client.py  config.py  configuration.py  exceptions.py  rest.py  settings.py  utils.py
cheshire_cat_api/api/: __init__.py  embedder_api.py  large_language_model_api.py  memory_api.py  plugins_api.py  prompt_api.py  rabbit_hole_api.py  settings_api.py  settings_embedder_api.py  settings_general_api.py  settings_large_language_model_api.py  settings_prompt_api.py  status_api.py
cheshire_cat_api/models/: __init__.py  body_upload_url.py  http_validation_error.py  location_inner.py  setting_body.py  validation_error.py  value.py
docs/: BodyUploadUrl.md  EmbedderApi.md  HTTPValidationError.md  LargeLanguageModelApi.md  LocationInner.md  MemoryApi.md  PluginsApi.md  PromptApi.md  RabbitHoleApi.md  SettingBody.md  SettingsApi.md  SettingsEmbedderApi.md  SettingsGeneralApi.md  SettingsLargeLanguageModelApi.md  SettingsPromptApi.md  StatusApi.md  ValidationError.md  Value.md  index.md
docs/models/: BodyUploadUrl.md  HTTPValidationError.md  SettingBody.md  ValidationError.md
getting_started/examples/: index.html
getting_started/installation/: index.html
mkdocs/: index.md
scripts/: prepare_changelog.py  release.sh
search/: search_index.json
test/: test_body_upload_url.py  test_embedder_api.py  test_http_validation_error.py  test_large_language_model_api.py  test_location_inner.py  test_memory_api.py  test_plugins_api.py  test_prompt_api.py  test_rabbit_hole_api.py  test_setting_body.py  test_settings_api.py  test_settings_embedder_api.py  test_settings_general_api.py  test_settings_large_language_model_api.py  test_settings_prompt_api.py  test_status_api.py  test_validation_error.py  test_value.py
test/test_models/: test_body_upload_url.py  test_http_validation_error.py  test_setting_body.py  test_validation_error.py
(+43 files in other folders)
