[tool.poetry]
name = "cheshire-cat-api"
version = "0.0.36"
description = "😸 Cheshire-Cat API"
authors = ["Cheshire Cat AI"]
license = "GPL-3"
readme = "README.md"
repository = "https://github.com/nicola-corbellini/test-api"
keywords = ["OpenAPI", "OpenAPI-Generator", "😸 Cheshire-Cat API"]
include = ["cheshire_cat_api/py.typed"]
dynamic = ["version"]

[tool.poetry.dependencies]
python = "^3.10"

urllib3 = ">= 1.25.3"
python-dateutil = ">=2.8.2"
pydantic = "^1.10.5, <2"
aenum = ">=3.1.11"
websocket-client= ">=1.6.1"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"
tox = ">=3.9.0"
flake8 = ">=4.0.0"

#[build-system]
#requires = ["setuptools", "poetry-core>=1.0.0"]
#build-backend = "setuptools.build_meta"

requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"


[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"

#[tool.setuptools.dynamic]
#version = {attr = "cheshire_cat_api.__version__"}
