[tool.poetry]
name = "cheshire_cat_api"
version = "0.2.1"
description = "😸 Cheshire-Cat API Client"
authors = ["Chesire Cat AI"]
maintainers = [
    "Nicola Corbellini"
]
homepage = "https://cheshirecat.ai/"
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/cheshire-cat-ai/cheshire-cat-api"
keywords = ["OpenAPI", "Cheshire-Cat", "LLM", "Open Source"]
include = ["cheshire_cat_api/py.typed"]
classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: FastAPI",
    "Development Status :: 3 - Alpha"
]
# ADD DOCUMENTATION WITH URL

[tool.poetry.dependencies]
python = "^3.7"

urllib3 = ">= 1.25.3"
python-dateutil = ">=2.8.2"
pydantic = "^1.10.5, <2"
aenum = ">=3.1.11"
websocket-client= ">=1.6.1"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"
tox = ">=3.9.0"
flake8 = ">=4.0.0"
toml = ">=0.10.2"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
