[tool.poetry]
name = "cheshire_cat_api"
version = "1.4"
description = "😸 Cheshire-Cat API Client"
authors = ["Chesire Cat AI"]
maintainers = [
    "Nicola Corbellini",
    "Piero Savastano",
    "Emanuele Morrone",
    "Marco Valenti",
    "Daniele Nicosia"
]
homepage = "https://cheshirecat.ai/"
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/cheshire-cat-ai/cheshire-cat-api"
keywords = ["OpenAPI", "Cheshire-Cat", "LLM", "OpenSource"]
include = ["cheshire_cat_api/py.typed"]
classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: FastAPI",
    "Development Status :: 3 - Alpha"
]
# ADD DOCUMENTATION WITH URL

[tool.poetry.dependencies]
python = "^3.10"

urllib3 = ">= 1.25.3, <2.1.0"
python-dateutil = ">=2.5.3"
pydantic = ">= 2"
websocket-client = ">=1.6.1"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"
tox = ">=3.9.0"
flake8 = ">=4.0.0"
toml = ">=0.10.2"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
